tests/NormalTests/paczka1/fuzzy1/10517096.err
Error in line 13: hQOSk A652 69,0
Error in line 16: QXJQo A652 26,7
Error in line 10: QE4ehqcro63 A737 13,2
Error in line 22: QE4ehqcro63 S351 89,5
Error in line 26: S351 A737 14,8
